cocoa browser: don't make non-MD tab titles smaller

Setting the title frame to be 14px high clips descenders from the text.
If TabController leaves the title frame at its default size, the text
draws properly and is vertically centered in the tab.

BUG=645755

Review-Url: https://codereview.chromium.org/2346513006
Cr-Commit-Position: refs/heads/master@{#419465}

Former-commit-id: 235ec06ba2318c7656bf40efdfa385cf68b2b92d